# GDASApp

./: .gitignore  .gitmodules  .pycodestyle  CMakeLists.txt  README.md  build.sh  satwind.yaml
bundle/: CMakeLists-j2.txt  CMakeLists.txt  fv3-interface.cmake  gdas_jedi_bundle.yaml  generate_cmakelists.py  get_big_jedi_hash.py
jedi_bundle/: CMakeLists-JEDI.j2.txt  CMakeLists.txt  gdas_jedi_bundle.yaml  generate_cmakelists.py
land-jediincr/: CMakeLists.txt  README.md
land-jediincr/cmake/: compiler_flags_GNU_CXX.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_GNU_Fortran.cmake_test  compiler_flags_Intel_Fortran.cmake  jediincr_compiler_flags.cmake
land-jediincr/sorc/: Makefile  NoahMPdisag_module.f90  apply_incr_noahmp_snow.f90  hera_modules  makefile.sh
sorc/: CMakeLists.txt
sorc/gdas-jedi/: CMakeLists.txt
sorc/gdas-jedi/mains/: CMakeLists.txt
test/: CMakeLists.txt  check_valid_yaml.py  convert_ewok_yaml.sh  genYAML_prep.sh  genYAML_prep_aero.sh  genYAML_prep_land.sh  run_jedi_exe_3dhofx.sh  run_jedi_exe_3dvar.sh  run_jedi_exe_letkf.sh  setup_workflow_exp.sh  socaincr2mom6.sh  test_generate_yaml.py
test/aero/: CMakeLists.txt  genyaml_3dvar.sh
test/aero/global-workflow/: CMakeLists.txt  config.aeroanl  config.yaml  gdas_prototype.yaml  jjob_var_final.sh  jjob_var_init.sh  jjob_var_run.sh  setup_workflow_exp.sh
test/atm/: CMakeLists.txt  run_jedi_exe_3denvar.sh  run_jedi_exe_3dhofx.sh  run_jedi_exe_3dvar.sh  run_jedi_exe_letkf.sh  test_convert_gsi_satbias.sh  test_store_gsi_satbias.py
test/atm/global-workflow/: 3dvar.ref  CMakeLists.txt  config.atmanal  config.atmanl  config.atmensanl  config.base.emc.dyn  config.yaml  gdas_prototype.yaml  gdas_prototype.yaml.j2  jcb-prototype_3dvar.yaml.j2  jcb-prototype_lgetkf.yaml.j2  jcb-prototype_lgetkf_observer.yaml.j2  jcb-prototype_lgetkf_solver.yaml.j2  jjob_ens_final.sh  jjob_ens_inc.sh  jjob_ens_init.sh  jjob_ens_init_split.sh  jjob_ens_letkf.sh  jjob_ens_obs.sh  jjob_ens_post.sh  jjob_ens_prep.sh  jjob_ens_run.sh  jjob_ens_sol.sh  jjob_post.sh  jjob_prep.sh  jjob_run.sh  jjob_var_final.sh  jjob_var_inc.sh  jjob_var_init.sh  jjob_var_post.sh  jjob_var_run.sh  lgetkf.ref  lgetkf_observer.ref  lgetkf_prototype.yaml  lgetkf_prototype.yaml.j2  lgetkf_solver.ref  run_jedi_exe_3denvar.sh  run_jedi_exe_3dhofx.sh  run_jedi_exe_3dvar.sh  run_jedi_exe_letkf.sh  (+1 more)
test/atm/validation/: CMakeLists.txt
test/fv3jedi/: CMakeLists.txt  akbk.nc4  fv3jedi_fieldmetadata_history.yaml
test/fv3jedi/testinput/: gdas_fv3jedi_jediinc2fv3.yaml  gdas_jediinc2fv3.yaml  gdasapp_fv3jedi_fv3inc.yaml  gdasapp_fv3jedi_jediinc2fv3.yaml
test/fv3jedi/testoutput/: gdasapp_fv3jedi_fv3inc.ref  gdasapp_fv3jedi_jediinc2fv3.ref  gdasapp_jedi_increment_to_fv3.ref
test/gw-ci/: CMakeLists.txt  create_exp.sh  get_cycles.py  run_exp.sh
test/land/: CMakeLists.txt  add_jedi_incr.sh  apply_jedi_incr.sh  create_bkg_ens.sh  letkfoi_land.yaml  letkfoi_snowda.sh  test_bufr2ioda.sh  test_imsproc.sh
test/marine/: CMakeLists.txt
test/marine/testinput/: bufr2ioda_insitu_profile_argo_2021063006.yaml.in  bufr2ioda_insitu_profile_bathy_2021063006.yaml.in  bufr2ioda_insitu_profile_glider_2021063006.yaml.in  bufr2ioda_insitu_profile_tesac_2021063006.yaml.in  bufr2ioda_insitu_profile_tropical_2019010700.yaml.in  bufr2ioda_insitu_profile_xbtctd_2021063006.yaml.in  bufr2ioda_insitu_surface_drifter_2019010700.yaml.in
test/marine/testref/: bufr2ioda_insitu_profile_argo_2021063006.ref  bufr2ioda_insitu_profile_bathy_2021063006.ref  bufr2ioda_insitu_profile_glider_2021063006.ref  bufr2ioda_insitu_profile_tesac_2021063006.ref  bufr2ioda_insitu_profile_tropical_2019010700.ref  bufr2ioda_insitu_profile_xbtctd_2021063006.ref  (+2 more)
test/snow/: CMakeLists.txt  apply_jedi_incr.sh  create_bkg_ens.sh  letkfoi_snow.yaml  letkfoi_snowda.sh  test_bufr2ioda.sh  test_imsproc.sh
test/soca/: CMakeLists.txt  create_bkgdb.py  create_obsdb.py  runtime_vars.sh  socaincr2mom6.sh  static.sh  test_bmat.sh  test_bmat_vrfy.sh  test_bufr2ioda.sh  test_prep.sh  test_run.sh  test_utils.sh
test/testinput/: amsua_n19_ewok.yaml  bufr_adpsfc.yaml  bufr_adpsfc_snow.yaml  bufr_dbuoy.yaml  bufr_mbuoyb.yaml  bufr_sfcships.yaml  bufr_sfcshipsu.yaml  bufr_sfcshp.yaml  bufr_sfcshpu.yaml  bufr_sfcsno_mapping.yaml  bufr_sfcsno_snow.yaml  bufr_snocvr_snow.yaml  bufr_tesac.yaml  bufr_tesacprof.yaml  bufr_trkob.yaml  bufr_trkobprof.yaml  check_yaml_keys_ref.yaml  check_yaml_keys_test.yaml  genYAML_example.yaml  generate_yaml.yaml  generate_yaml_include.yaml  salt_bufr_dbuoyprof.yaml  salt_bufr_mbuoybprof.yaml  temp_bufr_dbuoyprof.yaml  temp_bufr_mbuoybprof.yaml
test/testreference/: amsua_n19_gdas.yaml
utils/: CMakeLists.txt  CPPLINT.cfg  gdas_incr_handler.h  gdas_postprocincr.cc  gdas_postprocincr.h  gdas_socaincr2mom6.h
utils/chem/: CMakeLists.txt  chem_diagb.cc  chem_diagb.h
utils/fv3jedi/: CMakeLists.txt  fv3jedi_analcalc.cc  fv3jedi_analcalc.h  fv3jedi_calcanl.cc  fv3jedi_calcanl.h  fv3jedi_fv3inc.cc  fv3jedi_fv3inc.h  gdas_fv3jedi_jediinc2fv3.cc  gdas_fv3jedi_jediinc2fv3.h  gdas_jediinc2fv3.cc  gdas_jediinc2fv3.h  gdas_jediinc2fv3.yaml
utils/ioda_example/: CMakeLists.txt  gdas_dumpioda.cc  gdas_dumpioda.h  gdas_meanioda.cc  gdas_meanioda.h
utils/land/: CMakeLists.txt  land_ensrecenter.cc  land_ensrecenter.h
utils/obsproc/: Amsr2Ioda.h  CMakeLists.txt  Ghrsst2Ioda.h  IcecAbi2Ioda.h  IcecAmsr2Ioda.h  IcecJpssrr2Ioda.h  IcecMirs2Ioda.h  NetCDFToIodaConverter.h  NetCDFToIodaConverter2D.h  RTOFSInSitu.h  RTOFSSalinity.h  RTOFSTemperature.h  Rads2Ioda.h  Smap2Ioda.h  Smos2Ioda.h  Viirsaod2Ioda.h  superob.h  test.py  util.h
utils/snow/: CMakeLists.txt  snow_ensrecenter.cc  snow_ensrecenter.h
utils/soca/: CMakeLists.txt  gdas_diagb.cc  gdas_diagb.h  gdas_ens_handler.cc  gdas_ens_handler.h  gdas_incr_handler.cc  gdas_incr_handler.h  gdas_postprocincr.h  gdas_soca_diagb.cc  gdas_soca_diagb.h  gdas_socahybridweights.cc  gdas_socahybridweights.h  gdas_socaincr2mom6.cc  gdas_socaincr2mom6.h  gdassoca_obsstats.cc  gdassoca_obsstats.h
utils/test/: CMakeLists.txt  cpplint.py  prepdata.sh
(+1107 files in other folders)
